syntax = "proto3";

package enums;

enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;  // обязательное значение по умолчанию в proto3
  USER = 1;
  ADMIN = 2;
}

enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;  // No error

  // Validation errors (400)
  INVALID_INPUT = 1000;
  INVALID_EMAIL_FORMAT = 1001;
  INVALID_PASSWORD_FORMAT = 1002;
  PASSWORD_TOO_SHORT = 1003;
  MISSING_REQUIRED_FIELD = 1004;

  // Authentication errors (401)
  INVALID_CREDENTIALS = 2000;
  INVALID_TOKEN = 2001;
  TOKEN_EXPIRED = 2002;

  // Authorization errors (403)
  USER_NOT_ACTIVE = 3000;
  EMAIL_NOT_VERIFIED = 3001;
  INSUFFICIENT_PERMISSIONS = 3002;

  // Resource errors (404/409)
  USER_NOT_FOUND = 4000;
  USER_ALREADY_EXISTS = 4001;
  REFRESH_TOKEN_NOT_FOUND = 4002;

  // Server errors (500)
  INTERNAL_ERROR = 5000;
  DATABASE_ERROR = 5001;
  HASH_ERROR = 5002;
}
